--- a/app/board/static/board/login.css
+++ b/app/board/static/board/login.css
@@ -199,4 +199,8 @@ body {
              -webkit-text-fill-color: None;
              -webkit-box-shadow: None;
              transition: background-color 5000s ease-in-out 0s;
+             height: 60px;
+             border-radius: 10px;
+             width: 100%;
+             margin:0;
            }
