--- a/app/board/static/board/dashboards.css
+++ b/app/board/static/board/dashboards.css
@@ -208,7 +208,7 @@ body {
   top:60%;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid #6600ff;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
