--- a/app/board/static/board/dashboards.css
+++ b/app/board/static/board/dashboards.css
@@ -227,3 +227,8 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+#Wordcloud {
+  width: 800px;
+  height: 400px;
+}
