--- a/app/board/templates/board/dashboard.html
+++ b/app/board/templates/board/dashboard.html
@@ -5,188 +5,84 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta http-equiv="content-type" content="text/html"; charset="utf-8"/>
     <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-tag-cloud.min.js"></script>
-    <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
-    <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
     <script src="{% static 'board/js/draw_graphics.js' %}"></script>
-    <script src="{% static 'board/js/grid.js' %}"></script>    <meta charset="utf-8" />
+    <script src="{% static 'board/js/charts.js' %}"></script>
     <script type="text/javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'board/css/grid.css' %}" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{% static 'board/css/dashboard.css' %}" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{% static 'board/css/style.css' %}" media="screen" />
-
-  </head>
+    <link href="{% static 'board/feed.css' %}" rel="stylesheet">
+    <link href="{% static 'board/dashboards.css' %}" rel="stylesheet">
+    <!-- <script src={% static 'board/js/popup.js' %}></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+</head>
 
 <body>
-    <img src="{{ request.user.email | gravatar_url }}">
-    <header>
-      <a href="/board/dashboards/"><button type="button" >Back</button></a>
-      <a href="{% url 'view_by_id' dashboard.id %}"><button type="button" >View</button></a>
-    </header>
-
-    {% for figure in figures %}
-    <script type="text/javascript">
-        var sentAnalysis;
-        var freqAnalysis;
-        var decodeHTML = function (html) {
-          var txt = document.createElement('textarea');
-          txt.innerHTML = html;
-          return txt.value;
-        };
-        if ('{{figure.type}}' == 'Frequency analysis') {
-          var string = JSON.parse(decodeHTML(JSON.stringify('{{figure.data}}')));
-          freqAnalysis = string.slice(1,-1).split(",");
-          set_id_frec("freqChart");
-        } else if ('{{figure.type}}' == 'Sentiment analysis') {
-          sentAnalysis = JSON.parse(decodeHTML(JSON.stringify('{{figure.data}}')));
-        }
-
-        function addItemChart() {
-            var ind = Object.keys(freqAnalysis);
-            var values = [], keys = [];
-            for (k in ind) {
-              values.push(freqAnalysis[k].replace(/[^0-9]/gi, ''));
-              keys.push(freqAnalysis[k].replace(/[^а-яa-zA-ZА-ЯёЁ]/gi, ''));
-            }
-            set_params(keys, values);
-            draw("freqChart", keys, values);
-        }
-
-    </script>
-
-    {% endfor %}
-
-    </section>
-
-    <p>add description</p>
-    <form  action="{% url 'add_description' dashboard.id %}" method="POST">
-      {% csrf_token %}
-    <textarea name="description" rows="10" cols="40">{{ dashboard.description }}</textarea>
-    <input type="submit" value="Commit"/>
-    </form>
-
-    <h1>{{dashboard}}</h1>{{dashboard.owner}}<p>created: {{dashboard.created_at}}</p>
-    <div>
-    {{ dashboard.description | markdown | safe }}
+    <div class="navbar" style="z-index: 3;">
+      {% if request.user.is_authenticated %}
+      <a href="/board/dashboards/">Back</button></a>
+      {% else %}
+      <a href="/board/feed/">Back</button></a>
+      {% endif %}
+      <a href="/board/feed/" >Feed</a>
+      <a href="/board/dashboards/" class="active">My dashboards</a>
+      {% if request.user.is_authenticated %}
+      <a class="right" href="/board/signout/">Sign out</a>
+      <a  class="right" id="nav-avatar">
+        <img class="nav-avatar" src="{{ request.user.email  | gravatar_url }}">
+        <p class="nav-username">{{request.user.username}}<p>
+      </a>
+      {% else %}
+      <a class="right" href="/board/signin/">Sign in</a>
+      <a class="right" href="/board/signup/">Sign up</a>
+      {% endif %}
     </div>
-
-    <h3  style="color:darkblue;">What we found for {{dashboard.theme}} theme:<h3>
+  </div class="row" style="padding-left: 200px">
+  <div class="side" >
+    <div class="profile-section">
+      <div class="left">
+        <h2>{{request.user.username}}</h2>
+        <h5>{{request.user.email}}</h5>
+      </div>
+      <div class="right">
+        <img  src="{{ request.user.email | gravatar_url }}">
+        <a class="total-dashboards">{{ total_boards }}<b style="font-size:14px;color:gray;">dashboards</b></a>
+      
+      </div>
+    </div>
+    <div class="card" style="height: 175px"> 
+        <p>theme: <b style ="font-size:28px;font-family: Roboto,sans-serif">{{dashboard}}</b></p>
+        <p>created: <b style="font-size:14px;color:gray;">{{dashboard.created_at}}</b></p>
+    </div>
+  </div>
+  <div class="main" style="padding-left: 500px">
+    <div class="card">
+      <h3  style="color:darkblue;">What we found for {{dashboard.theme}} theme:</h3>
       <h4>
         <ul>
             {% for article in dashboard_data %}
             <li>
-                <b><i style="color:grey;">{{ article.created_at }}:</i> {{ article.title }} </b><br />
+                <b><i style="color:grey;">{{ article.created_at }}:</i> {{ article.title }}: {{ article.text | get_hashtags}}</b><br />
             </li>
             {% endfor %}
         </ul>
       </h4>
-      
-      <div>
-      <b>Figures</b>
-          {% for figure in figures %}
-          <div>
-              <b>{{ figure.type }} (modified: {{ figure.modify_at }} )</b>
-              <p>{{figure.data}}</p>
+      <p>add new figure</p>
+      <form  action="{% url 'add_figure' dashboard.id %}" method="POST">
+        {% csrf_token %}
+      <select name="figure_type" size="4">
+          <option>Frequency analysis</option>
+          <option>Wordcloud</option>
+      </select><br>
+          <input type="submit" value="Add"/>
+      </form>
+      {% if error %}
+        <p style="color:red;">{{ error }}</p>
+      {% endif %}
+    </div>
 
-          </div>
-          {% endfor %}
-      </div>
-
-    <p>add new figure</p>
-    <form  action="{% url 'add_figure' dashboard.id %}" method="POST">
-      {% csrf_token %}
-    <select name="figure_type" size="4">
-        <option>Frequency analysis</option>
-        <option>Wordcloud</option>
-        <option>Correlation heatmap</option>
-        <option>Sentiment analysis</option>
-    </select><br>
-        <input type="submit" value="Add"/>
-    </form>
-    {% if error %}
-      <p style="color:red;">{{ error }}</p>
-    {% endif %}
+  </div>
 
 </body>
 </html>
-
-
-<!-- 
-    <div class="header">
-      <a href="#default" class="logo">CompanyLogo</a>
-      <div class="header-right">
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-    </div> -->
-    <!-- <a href="/board/dashboards/"><button type="button" >Back</button></a>
-    
-    <a href="{% url 'view_by_id' dashboard.id %}"><button type="button" >View</button></a>
-    <section class="grid-demo">
-
-      <h2 class="section-title"><span>Grid Demo</span></h2>
-
-      <div class="controls cf">
-        <div class="control search">
-          <div class="control-icon">
-            <i class="material-icons">&#xE8B6;</i>
-          </div>
-          <input class="control-field search-field form-control " type="text" name="search" placeholder="Search..." />
-        </div>
-        <div class="control filter">
-          <div class="control-icon">
-            <i class="material-icons">&#xE152;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field filter-field form-control">
-            <option value="" selected>All</option>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-          </select>
-        </div>
-        <div class="control sort">
-          <div class="control-icon">
-            <i class="material-icons">&#xE164;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field sort-field form-control">
-            <option value="order" selected>Drag</option>
-            <option value="title">Title (drag disabled)</option>
-            <option value="color">Color (drag disabled)</option>
-          </select>
-        </div>
-        <div class="control layout">
-          <div class="control-icon">
-            <i class="material-icons">&#xE871;</i>
-          </div>
-          <div class="select-arrow">
-            <i class="material-icons">&#xE313;</i>
-          </div>
-          <select class="control-field layout-field form-control">
-            <option value="left-top" selected>Left Top</option>
-            <option value="left-top-fillgaps">Left Top (fill gaps)</option>
-            <option value="right-top">Right Top</option>
-            <option value="right-top-fillgaps">Right Top (fill gaps)</option>
-            <option value="left-bottom">Left Bottom</option>
-            <option value="left-bottom-fillgaps">Left Bottom (fill gaps)</option>
-            <option value="right-bottom">Right Bottom</option>
-            <option value="right-bottom-fillgaps">Right Bottom (fill gaps)</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="grid"></div>
-
-      <div class="grid-footer">
-        <button class="add-more-items btn btn-primary" onclick="addItemChart();"><i class="material-icons">&#xE145;</i>Add chart item</button>
-        <button class="add-more-items btn btn-primary" onclick="addTextItem();"><i class="material-icons">&#xE145;</i>Add text item</button>
-      </div> -->
