--- a/app/board/templates/board/signup.html
+++ b/app/board/templates/board/signup.html
@@ -4,8 +4,8 @@
 <html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html"; charset="utf-8"/>
-    <link href="{% static 'board/css/login.css' %}" rel="stylesheet">
-    <link href="{% static 'board/css/signup.css' %}" rel="stylesheet">
+    <link href="{% static 'board/login.css' %}" rel="stylesheet">
+    <link href="{% static 'board/signup.css' %}" rel="stylesheet">
 </head>
 <body>
 <div id="form_wrapper" class="input_container">
