fixes admin and login

--- a/app/board/templates/board/login.html
+++ b/app/board/templates/board/login.html
@@ -8,7 +8,7 @@
 <body>
 <div id="form_wrapper" class="input_container">
   <div id="form_left">
-    <img src="{% static 'board/img/login.jpg' %}" alt="3d rjekich">
+    <a href="/board/"><img src="{% static 'board/img/login.jpg' %}" alt="3d rjekich"></a>
 </div>
 
 <div id="form_right">
